# GRAMS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
evaluation/: performance.py  test.py
examples/: .gitignore
examples/misc/tables/: graph.html  graph.sg.js  list_of_largest_selling_pharmaceutical_products_1_5056ea45fa51e4aa85161f1d9f5ff171.json  list_of_largest_selling_pharmaceutical_products_2_0e75aebc11389ca6b9327bfd3de52abd.json  metadata.js  president_of_the_national_council_austria_10_0f1733248af445ee5a7d360a648bf9b1.json
examples/novartis/: main.ipynb
examples/novartis/tables/: table_01.csv  table_01.links.tsv  table_02.csv  table_02.links.tsv  table_03.csv  table_03.links.tsv
examples/semtab2020_novartis/: CPA_Round4_gt.csv  CPA_Round4_targets.csv  CTA_Round4_gt.csv  CTA_Round4_targets.csv  main.ipynb
examples/semtab2020_novartis/tables/: 09JYR2PD.csv  09JYR2PD.json  09JYR2PD.links.tsv  3MQ7IT3G.csv  3MQ7IT3G.json  3MQ7IT3G.links.tsv  3W4Z4171.csv  3W4Z4171.json  3W4Z4171.links.tsv  3XS3Q318.csv  3XS3Q318.json  3XS3Q318.links.tsv  4B1GJLSN.csv  4B1GJLSN.json  4B1GJLSN.links.tsv  4RBZR30S.csv  4RBZR30S.json  4RBZR30S.links.tsv  5Y26A605.csv  5Y26A605.json  5Y26A605.links.tsv  61Q74GUH.csv  61Q74GUH.json  61Q74GUH.links.tsv  6FJO0SHP.csv  6FJO0SHP.json  6FJO0SHP.links.tsv  6UREB4EJ.csv  6UREB4EJ.json  6UREB4EJ.links.tsv  779ATGSV.csv  779ATGSV.json  779ATGSV.links.tsv  7QUE5XLF.csv  7QUE5XLF.json  7QUE5XLF.links.tsv  7XVEWDHG.csv  7XVEWDHG.json  7XVEWDHG.links.tsv  8GXR654P.csv  (+108 more)
examples/t2dv2/: main.ipynb
examples/t2dv2/tables/: 29414811_2_4773219892816395776.candidates.tsv  29414811_2_4773219892816395776.links.tsv  29414811_2_4773219892816395776.table_linker.csv
grams/: __main__.py  cli.py  config.py  db.py  entity_linker_interface.py  evaluator.py  grams.yaml  main.py  prelude.py  remote_table_fetcher.py  update_ontology.py
grams/actors/: __main__.py  actor_helpers.py  augcan_actor.py  data_graph_actor.v1  dataset_actor.py  db_actor.py  db_actor.v1  evaluator.py  grams_actor.py  grams_actor.v1  grams_inf_actor.py  grams_infdata_actor.py  grams_preprocess_actor.py  osin_eval_helper.py
grams/algorithm/: autolabeler.py  bank_solver.py  context.py  data_graph.py  dev_env.py  helpers.py  kg_index.py  link_feature.py  literal_match.py  psl_solver.py  semantic_graph.py  semtab2020.py  sm_wikidata.py  type_feature.py  wdont.py
grams/algorithm/candidate_graph/: cg_factory.py  cg_graph.py
grams/algorithm/data_graph/: __init__.py  dg_config.py  dg_factory.py  dg_graph.py  dg_inference.py  dg_pruning.py
grams/algorithm/deprecated/: link_feature.py  psl_solver.py  type_feature.py
grams/algorithm/inferences/: psl_config.py  psl_gram_model.py  psl_gram_model_exp.py  psl_gram_model_exp2.py  psl_gram_model_exp3.py  psl_lib.py
grams/algorithm/literal_matchers/: __init__.py  coordinate_match.py  datetime_match.py  entity_match.py  literal_match.py  number_match.py  string_match.py  text_parser.py  types.py
grams/algorithm/postprocessing/: __init__.py  arborescence.py  common.py  config.py  known_targets.py  pairwise_selection.py  reduce_numerical_noise.py  semtab2020.py  simple_path.py  steiner_tree.py
grams/core/: __init__.pyi  base.pyi  cangraph.pyi  datagraph.pyi  features.pyi  literal_matchers.pyi  steps.pyi  strsim.pyi  table.pyi
grams/core/steps/: __init__.pyi  data_matching.pyi
grams/evaluation/: autolabeler.py  evaluator.py  prelude.py  scoring_fn.py  sm_metrics.py
grams/html_table_parser/: __init__.py  context_extractor.py  html_table.py  parsing_exception.py  table_parser.py
grams/inputs/: __init__.py  column.py  context.py  linked_table.py  table.py
grams/kg_data/: wikidatamodels.py
grams/misc/: __init__.py  deser.py  exp_manager.py  fn_cache.py  map.py  misc.py  read_file.py  snapshot.py
grams/misc/graph/: __init__.py  deser.py  edmonds.py  query.py  test.py  test2.py  viz.py
grams/outputs/: __init__.py  semantic_model.py
sm_annotator/: annotator.ipynb
sm_annotator/sm_annotator/: annotator.py  annotator_assistant.py  base_app.py  foldable_list.py  ontology_api.py  prelude.py  slider.py  sm_visualizer.py
sm_annotator/webapps/annotator/: package-lock.json  package.json
sm_annotator/webapps/foldable_list/: package-lock.json  package.json
src/: context.rs  db.rs  error.rs  helper.rs  kgvalue.rs  lib.rs  macros.rs  table.rs
src/cangraph/: mod.rs  node.rs
src/datagraph/: mod.rs  node.rs  statement.rs
src/datagraph/python/: graphview.rs  mod.rs
src/features/: detect_contradicted_info.rs  dgproxy.rs  mod.rs  python.rs
src/index/: cache_traversal.rs  index_traversal.rs  mod.rs  object_hop1_index.rs  vanila_traversal.rs
src/literal_matchers/: entity_match.rs  globecoordinate_match.rs  mod.rs  monolingual_text_match.rs  parsed_text_repr.rs  quantity_match.rs  string_match.rs  time_match.rs
src/steps/: augmenting_candidates.rs  candidate_local_search.rs  data_matching.rs  mod.rs  python.rs
src/steps/python/: data_matching.rs  mod.rs
src/strsim/: hybrid_jaccard.rs  jaro.rs  jaro_winkler.rs  levenshtein.rs  mod.rs  monge_elkan.rs  python.rs  strsim_wrapper.rs  tokenizers.rs
src/strsim/wrapped_strsim/: mod.rs  seq_strsim.rs  set_strsim.rs
tests/: cli_test.py  import_test.py  main.rs  smoke_test.py
tests/algorithm/: test_psl_lib.py
tests/html_table_parser/: conftest.py  test_context_extractor.py
tests/python/: conftest.py
tests/python/algorithm/: conftest.py  test_data_matching.py  test_psl_lib.py
tests/python/html_table_parser/: conftest.py  test_context_extractor.py
tests/resources/data_matching/: Miss_Heritage_2014.csv  Miss_Heritage_2014.links.tsv  Miss_Heritage_2014.matches.tsv  list_of_highest_mountains.csv  list_of_highest_mountains.links.tsv  list_of_highest_mountains.matches.tsv
tests/resources/html_table_parser/: ContextExtractor_GetTree.html  Raipur_Lok_Sabha_constituency.html
tests/rust/: mod.rs
tests/rust/steps/: data_matching.rs  mod.rs
tests/rust/strsim/: hybrid_jaccard.rs  jaro.rs  jaro_winkler.rs  mod.rs  (+5 more)
(+86 files in other folders)
