[package]
name = "grams"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grams"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
bincode = "1.3.3"
bzip2 = "0.4.3"
env_logger = "0.9.0"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
log = "0.4.17"
pyo3 = { version = "0.16.5", features = ["anyhow"] }
pythonize = "0.16.0"
rayon = "1.5.3"
rustworkx-core = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
rstest = "0.13.0"
tempfile = "3.3.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
