[package]
name = "grams"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grams"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "grams.core"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
bincode = "1.3.3"
bzip2 = "0.4.3"
env_logger = "0.9.0"
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
log = "0.4.17"
pyo3 = { version = "0.16.5", features = ["anyhow"] }
pythonize = "0.16.0"
rayon = "1.5.3"
rustworkx-core = "0.12.1"
petgraph = { version = "0.6.2", features = ["serde-1"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kgdata = { path = "../kgdata", default-features = false }
hashbrown = "0.13.2"
postcard = { version = "1.0.2", features = ["alloc"] }
itertools = "0.10.5"
strsim = "0.10.0"
rocksdb = "0.20.1"
once_cell = "1.17.1"
lapjv = "0.2"
regex = "1.7.3"
derive_more = "0.99.17"
ndarray = "0.15"
num-traits = "0.2"

[patch.crates-io]
lapjv = { git = "https://github.com/binh-vu/lapjv-rust.git" }

[dev-dependencies]
rstest = "0.13.0"
tempfile = "3.3.0"
approx = "0.5.1"
maplit = "1.0.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
