[tool.poetry]
name = "sm-grams"
version = "2.1.3"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
packages = [
    { include = "grams" }
]
readme = "README.md"
homepage = "https://github.com/usc-isi-i2/grams"
repository = "https://github.com/usc-isi-i2/grams"

[tool.poetry.scripts]
grams = 'grams.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
beautifulsoup4 = "^4.9.3"
orjson = "^3.6.8"
python-slugify = "^5.0.2"
tqdm = "^4.64.0"
ujson = "^5.1.0"
"ruamel.yaml" = "^0.17.9"
loguru = ">=0.6.0"
networkx = "^2.8.2"
html5lib = "^1.1"
omegaconf = "^2.0.6"
rdflib = "^6.1.1"
ipython = "^8.0.1"
matplotlib = "^3.4.2"
rltk = "==2.0.0-alpha.15"
pslpython = "==2.2.2"
fastnumbers = "^3.1.0"
ftfy = "^6.1.1"
python-Levenshtein = "^0.12.2"
sem-desc = "^3.6.0"
kgdata = "^3.0.1"
click = "^8.1.3"
steiner-tree = "^1.1.3"
ned = "^1.0.0"
typing_extensions = "^4.0.0"
hugedict = "^2.1.0"
graph-wrapper = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.6.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
