[project]
name = "sm-grams"
version = "3.0.0a1"
authors = [
    { name = "Binh Vu", email = "binh@toan2.com" },
]
description = "A library to build semantic descriptions of tables"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.9"

dependencies = [
    'requests >= 2.28.0, < 3.0.0',
    'beautifulsoup4 >= 4.9.3, < 5.0.0',
    'orjson >= 3.8.2, < 4.0.0',
    'python-slugify >= 6.1.2, < 7.0.0',
    'tqdm >= 4.64.0, < 5.0.0',
    'ujson >= 5.5.0, < 6.0.0',
    'ruamel.yaml >= 0.17.21, < 0.18.0',
    'loguru >= 0.6.0, < 0.7.0',
    'networkx >= 2.8.2, < 3.0.0',
    'html5lib >= 1.1.0, < 2.0.0',
    'omegaconf >= 2.0.6, < 3.0.0',
    'rdflib >= 6.1.1, < 7.0.0',
    'ipython >= 8.0.1, < 9.0.0',
    'matplotlib >= 3.5.3, < 4.0.0',
    'rltk >= 2.0.0-a20, <= 2.0.0-a20',
    'pslpython >= 2.2.2, <= 2.2.2',
    'fastnumbers >= 3.2.1, < 4.0.0',
    'numparser2 >= 1.0.0, < 2.0.0',
    'ftfy >= 6.1.1, < 7.0.0',
    'sem-desc >= 4.4.2, < 5.0.0',
    'kgdata >= 3.4.2, < 4.0.0',
    'click >= 8.0.0, <= 8.0.4',
    'steiner-tree >= 1.1.3, < 2.0.0',
    'ned >= 1.8.3, < 2.0.0',
    'typing_extensions >= 4.0.0, < 5.0.0',
    'hugedict >= 2.9.1, < 3.0.0',
    'graph-wrapper >= 1.5.0, < 2.0.0',
    'timer4 >= 1.0.4, < 2.0.0',
    'ream2 >= 2.2.0, < 3.0.0',
]

[project.urls]
homepage = "https://github.com/usc-isi-i2/grams"
repository = "https://github.com/usc-isi-i2/grams"

[project.scripts]
grams = 'grams.cli:cli'

[project.optional-dependencies]
dev = [
    'pytest >= 7.1.3, < 8.0.0',
    'pytest-mock >= 3.6.1, < 4.0.0',
]

[tool.maturin]
include = ["grams"]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"